<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_item_home"></item>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_item_profile"></item>
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist"
            android:title="@string/menu_item_playlist"></item>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_item_vote"></item>

    </group>
    <item android:title="@string/menu_downloaded">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_downloaded"
                android:icon="@drawable/ic_downloaded"
                android:title="@string/menu_item_downloaded"></item>
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_item_communication">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_item_send"></item>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_item_logout"></item>
            </group>
        </menu>
    </item>

</menu>